IF(RAFT_IS_ANDROID)
    file(GLOB_RECURSE Ancona_System_Code Android/*.cpp)
    file(GLOB_RECURSE Ancona_System_Headers Android/*.hpp)
ELSEIF(RAFT_IS_IOS)
    file(GLOB_RECURSE Ancona_System_Code iOS/*.cpp)
    file(GLOB_RECURSE Ancona_System_Headers iOS/*.hpp)
ELSEIF(RAFT_IS_DESKTOP)
    file(GLOB_RECURSE Ancona_System_Code Desktop/*.cpp)
    file(GLOB_RECURSE Ancona_System_Headers Desktop/*.hpp)
ENDIF()

file(GLOB Ancona_System_Generic_Code *.cpp)
file(GLOB Ancona_System_Generic_Headers *.hpp)

add_library(Ancona_System ${Ancona_System_Code} ${Ancona_System_Headers} ${Ancona_System_Generic_Code} ${Ancona_System_Generic_Headers})
install(TARGETS Ancona_System DESTINATION lib)
